--- a/bootstrap/css/monstyle.css
+++ b/bootstrap/css/monstyle.css
@@ -150,7 +150,15 @@ footer a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    display: none;
+}
+.alert1{
+    position: absolute;
+    display: flex;
+    top: 0;
+    font-size: 16px;
+    color: rgb(235, 79, 79);
+    padding: 5px;
+    
 }
 .form form{
     width: 90%;
@@ -196,7 +204,6 @@ form button:hover{
     width: 100%;
     text-align: right;
 }
-
 @-webkit-keyframes rouler{
     from{opacity:0.5;}
     to{opacity: 1;}
@@ -221,7 +228,7 @@ nav .mob{
 }
 .alert{
     position: absolute;
-    display: block;
+    display: none;
     padding: 10px;
     color: white;
     text-align: center;
