--- a/bootstrap/css/monstyle.css
+++ b/bootstrap/css/monstyle.css
@@ -11,7 +11,6 @@ header{
     margin:0;
     padding:0;
 }
-
 nav{    
     display: flex;
     padding: 10px;
@@ -122,6 +121,10 @@ footer button{
     appearance: none;
     background-color: rgb(238, 71, 71);
 }
+footer a{
+    text-decoration: none;
+    color: white;
+}
 .form{
     height: 330px;
     width: 300px;
@@ -140,13 +143,13 @@ footer button{
     align-items: center;
     display: none;
 }
-form{
+.form form{
     width: 90%;
     position: relative;
     text-align: center;
     margin: 0 auto;
 }
-form p input{
+     form p input{
     height: 30px;
     width: 200px;
     background: transparent;
@@ -155,7 +158,7 @@ form p input{
     border:none;
     border-bottom:2px solid teal;
 }
-form p input::placeholder{
+.form form p input::placeholder{
     position: relative;
     top: -15px;
 }
@@ -184,6 +187,7 @@ form button:hover{
     width: 100%;
     text-align: right;
 }
+
 @-webkit-keyframes rouler{
     from{opacity:0.5;}
     to{opacity: 1;}
