--- a/bootstrap/css/monstyle.css
+++ b/bootstrap/css/monstyle.css
@@ -80,8 +80,6 @@ nav>ul>li{
 main{
     padding: 10px;
     margin: 0;
-    height: 480px;
-    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -131,6 +129,10 @@ footer a{
     text-decoration: none;
     color: white;
 }
+.teal{
+    background-color:teal;
+    color:white;
+}
 .form{
     height: 330px;
     width: 300px;
@@ -155,7 +157,7 @@ footer a{
     text-align: center;
     margin: 0 auto;
 }
-     form p input[type="text"]{
+     form p input[type="text"], form p input[type="password"]{
     height: 30px;
     width: 200px;
     background: transparent;
@@ -164,7 +166,7 @@ footer a{
     border:none;
     border-bottom:2px solid teal;
 }
-.form form p input[type="text"]::placeholder{
+.form form p input[type="password"]::placeholder, .form p input[type="text"]::placeholder{
     position: relative;
     top: -15px;
 }
@@ -226,7 +228,7 @@ nav .mob{
     background-color:rgb(235, 79, 79);
     z-index: 2;
     margin: 10px;
-    color:blue;
+    color:rgb(132, 132, 226);
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     bottom: 50%;
