--- a/bootstrap/css/bord.css
+++ b/bootstrap/css/bord.css
@@ -65,6 +65,23 @@
     background-color:teal;
     color: white;            
         }
+        .alert{
+            position: absolute;
+            display: block;
+            padding: 10px;
+            color: white;
+            text-align: center;
+            right: 0;   
+            background-color:rgb(235, 79, 79);
+            z-index: 2;
+            margin: 10px;
+            color:rgb(132, 132, 226);
+            border-top-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            bottom: 50%;
+            display: none;
+            transition: 2s transform(scale(1.1));
+        }
         .row>div>.img{
             height: 100px;
             display:flex;
