--- a/bootstrap/css/bord.css
+++ b/bootstrap/css/bord.css
@@ -22,6 +22,9 @@
         z-index: 2;
         box-shadow:2px 2px 4px gray;
     }
+    *{
+        outline: none;
+    }
     .modal form{
         width: 100%;
         text-align: center;
